created and applied loaders for home, newsroom and resources page

--- a/src/styles/components/_errorPage.scss
+++ b/src/styles/components/_errorPage.scss
@@ -19,11 +19,6 @@
     border: none;
     background-color: $white;
     color: $darkGray;
-    &:hover {
-      background-color: $lightBlue;
-      color: $white;
-      scale: 1.08;
-      transition: 0.1s ease;
-    }
+    cursor: pointer;
   }
 }
