--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,3 +15,5 @@
 @import "./components/loaderAnimation";
 @import "./components/loaderMember";
 @import "./components/loaderSupporter";
+@import "./components/loaderMediaList";
+@import "./components/loaderReport";
