--- a/src/styles/global/_variables.scss
+++ b/src/styles/global/_variables.scss
@@ -1,9 +1,10 @@
 //Backgrounds Colours
 $lightBlue: #1991eb;
-$lightGray: #d3d3d3;
+$lighterGray: #eeeeee;
+$lightGray: #dddddd;
+$lightTeal:  #296088;
 
 //Text
-$lightGray: #d3d3d3;
 $gray: #5b697a;
 $darkGray: #333333;
 $red: #f85359;
