--- a/src/styles/components/_loaderAnimation.scss
+++ b/src/styles/components/_loaderAnimation.scss
@@ -6,3 +6,15 @@
     background-position: 1000px 0;
   }
 }
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.loading {
+  animation: fade-in 2s forwards;
+}
