--- a/src/styles/components/_loaderMediaList.scss
+++ b/src/styles/components/_loaderMediaList.scss
@@ -5,8 +5,8 @@
     .mediaTitle,
     .mediaLogo,
     .mediaButtonContainer {
-      animation: loading 8s linear infinite;
-      background: linear-gradient(90deg, $white, $lightGray, $white);
+      background: linear-gradient(90deg, $lighterGray, $lightGray, $lighterGray);
+      animation: loading 20s linear infinite;
       display: block;
     }
     .mediaType {
