--- a/src/styles/components/_loaderSupporter.scss
+++ b/src/styles/components/_loaderSupporter.scss
@@ -1,7 +1,7 @@
 .loaderContainer {
   .supporterPicContainer {
-    background: linear-gradient(90deg, $white, $lightGray, $white);
-    animation: loading 8s linear infinite;
+    background: linear-gradient(90deg, $lighterGray, $lightGray, $lighterGray);
+    animation: loading 20s linear infinite;
     height: 125px;
     display: block;
     border-radius: 50%;
