added loader content opportunity

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,3 +19,4 @@
 @import "./components/loaderReport";
 @import "./components/mainCardLoader";
 @import "./components/loaderInfographics";
+@import "./components/loaderContentOpportunity";
