--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1677,4 +1677,22 @@ footer .footerContainer .socialMediaContainer ul {
   .loaderContainer .galleryContainer li.imgOnly {
     flex-basis: 50%;
   }
+}
+
+.loaderContainer .blockContentContainer {
+  margin: 0 auto;
+}
+.loaderContainer .blockContentContainer .contentParagraph1 {
+  width: 100%;
+  height: 10rem;
+  background: linear-gradient(90deg, #ffffff, #d3d3d3, #ffffff);
+  -webkit-animation: loading 8s linear infinite;
+          animation: loading 8s linear infinite;
+}
+.loaderContainer .blockContentContainer .loaderTitleContainer {
+  height: 100px;
+  margin-bottom: 55px;
+  background: linear-gradient(90deg, #ffffff, #d3d3d3, #ffffff);
+  -webkit-animation: loading 8s linear infinite;
+          animation: loading 8s linear infinite;
 }/*# sourceMappingURL=main.css.map */
