added loader call to action

--- a/src/styles/components/_loaderInfographics.scss
+++ b/src/styles/components/_loaderInfographics.scss
@@ -15,8 +15,13 @@
         height: 200px;
         margin-bottom: 20px;
         border-radius: 50%;
-        background: linear-gradient(90deg, $white, $lightGray, $white);
-        animation: loading 8s linear infinite;
+        background: linear-gradient(
+          90deg,
+          $lighterGray,
+          $lightGray,
+          $lighterGray
+        );
+        animation: loading 20s linear infinite;
 
         .infographic {
           border-style: none;
@@ -29,14 +34,24 @@
         width: 230px;
         height: 2.5rem;
         margin-bottom: 10px;
-        background: linear-gradient(90deg, $white, $lightGray, $white);
-        animation: loading 8s linear infinite;
+        background: linear-gradient(
+          90deg,
+          $lighterGray,
+          $lightGray,
+          $lighterGray
+        );
+        animation: loading 20s linear infinite;
       }
       .infContent {
         max-width: 350px;
         height: 6rem;
-        background: linear-gradient(90deg, $white, $lightGray, $white);
-        animation: loading 8s linear infinite;
+        background: linear-gradient(
+          90deg,
+          $lighterGray,
+          $lightGray,
+          $lighterGray
+        );
+        animation: loading 20s linear infinite;
       }
     }
     li.imgOnly {
