--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -487,34 +487,14 @@ footer .footerContainer .socialMediaContainer ul {
   text-align: left;
   margin-bottom: 25px;
 }
-.mainCard .loading {
-  -webkit-animation: fade-in 2s forwards;
-          animation: fade-in 2s forwards;
-}
-@-webkit-keyframes fade-in {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-@keyframes fade-in {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
 
 .members {
-  margin-top: 110px;
-  margin-bottom: 110px;
+  margin-top: 50px;
+  margin-bottom: 50px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 110px;
+  gap: 50px;
 }
 @media (max-width: 590px) {
   .members {
@@ -527,7 +507,7 @@ footer .footerContainer .socialMediaContainer ul {
   height: 5rem;
   display: flex;
   align-items: center;
-  margin-bottom: 110px;
+  margin-bottom: 50px;
 }
 .members .memberTypeContainer .memberType {
   font-weight: 600;
@@ -807,6 +787,7 @@ footer .footerContainer .socialMediaContainer ul {
   font-size: 0.7rem;
 }
 .blockContentContainer a {
+  color: #1f4a68;
   font-size: inherit;
   text-decoration: underline;
 }
@@ -817,7 +798,8 @@ footer .footerContainer .socialMediaContainer ul {
   height: 5rem;
   display: flex;
   align-items: center;
-  margin-bottom: 110px;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 .pageTitleContainer .pageTitle {
   font-weight: 600;
@@ -828,10 +810,6 @@ footer .footerContainer .socialMediaContainer ul {
   margin: 0 30px;
 }
 
-.opportunityTitle {
-  margin-bottom: 55px;
-}
-
 .mediaList {
   display: flex;
   flex-wrap: wrap;
@@ -839,7 +817,7 @@ footer .footerContainer .socialMediaContainer ul {
   gap: 60px 30px;
 }
 .mediaList .mediaContainer {
-  flex: 1 0 calc(33.3333333333% - 20px);
+  flex-basis: calc(33.3333333333% - 20px);
   border: 1px solid #333333;
   padding: 20px 25px;
   display: flex;
@@ -911,7 +889,7 @@ footer .footerContainer .socialMediaContainer ul {
 }
 @media (max-width: 899px) {
   .mediaList .mediaContainer {
-    flex: 1 0 calc(50% - 20px);
+    flex-basis: calc(50% - 10px);
   }
   .mediaLogoContainer .mediaLogo {
     height: 200px;
@@ -1382,20 +1360,43 @@ footer .footerContainer .socialMediaContainer ul {
     background-position: 1000px 0;
   }
 }
+@-webkit-keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.loading {
+  -webkit-animation: fade-in 10s forwards;
+          animation: fade-in 10s forwards;
+}
+
 .loaderContainer {
-  margin-bottom: 100px;
+  margin-bottom: 50px;
+  width: 100%;
 }
 .loaderContainer .loaderTitleContainer,
 .loaderContainer .picContainer,
 .loaderContainer .membersName,
 .loaderContainer .membersTitle,
 .loaderContainer .membersIntro {
-  background: linear-gradient(90deg, #ffffff, #d3d3d3, #ffffff);
-  -webkit-animation: loading 8s linear infinite;
-          animation: loading 8s linear infinite;
+  background: linear-gradient(90deg, #eeeeee, #dddddd, #eeeeee);
+  -webkit-animation: loading 20s linear infinite;
+          animation: loading 20s linear infinite;
   display: block;
 }
 .loaderContainer .loaderTitleContainer {
+  background: linear-gradient(90deg, #296088, #1f4a68, #296088);
   margin: 100px 0;
   height: 100px;
 }
@@ -1508,9 +1509,9 @@ footer .footerContainer .socialMediaContainer ul {
 }
 
 .loaderContainer .supporterPicContainer {
-  background: linear-gradient(90deg, #ffffff, #d3d3d3, #ffffff);
-  -webkit-animation: loading 8s linear infinite;
-          animation: loading 8s linear infinite;
+  background: linear-gradient(90deg, #eeeeee, #dddddd, #eeeeee);
+  -webkit-animation: loading 20s linear infinite;
+          animation: loading 20s linear infinite;
   height: 125px;
   display: block;
   border-radius: 50%;
@@ -1553,15 +1554,14 @@ footer .footerContainer .socialMediaContainer ul {
 
 .loaderContainer .mediaContainer {
   border: none;
-  background: linear-gradient(90deg, #ffffff, #5b697a, #ffffff);
-  -webkit-animation: loading 8s linear infinite;
-          animation: loading 8s linear infinite;
 }
 .loaderContainer .mediaContainer .mediaType,
 .loaderContainer .mediaContainer .mediaTitle,
 .loaderContainer .mediaContainer .mediaLogo,
 .loaderContainer .mediaContainer .mediaButtonContainer {
-  background: linear-gradient(90deg, #ffffff, #d3d3d3, #ffffff);
+  background: linear-gradient(90deg, #eeeeee, #dddddd, #eeeeee);
+  -webkit-animation: loading 20s linear infinite;
+          animation: loading 20s linear infinite;
   display: block;
 }
 .loaderContainer .mediaContainer .mediaType {
@@ -1580,49 +1580,33 @@ footer .footerContainer .socialMediaContainer ul {
   }
 }
 
-.loaderContainer .reportContainer .reportBg,
-.loaderContainer .reportContainer .reportType,
-.loaderContainer .reportContainer .reportTitle,
-.loaderContainer .reportContainer .reportButton {
-  background: linear-gradient(90deg, #ffffff, #d3d3d3, #ffffff);
-  -webkit-animation: loading 8s linear infinite;
-          animation: loading 8s linear infinite;
+.loaderContainer .reportContainer {
+  background: linear-gradient(90deg, #eeeeee, #dddddd, #eeeeee);
+  -webkit-animation: loading 20s linear infinite;
+          animation: loading 20s linear infinite;
   display: block;
+  height: 394px;
 }
-.loaderContainer .reportContainer .reportBg {
-  background: linear-gradient(90deg, #ffffff, #5b697a, #ffffff);
-}
-.loaderContainer .reportContainer .reportType {
-  width: 50%;
-  height: 25px;
-}
-.loaderContainer .reportContainer .reportTitle {
-  width: 80%;
-  height: 250px;
-}
-.loaderContainer .reportContainer .reportButton {
-  width: 40%;
-  height: 40px;
-}
-.loaderContainer .reportContainer .reportType,
-.loaderContainer .reportContainer .reportTitle {
-  margin-bottom: 20px;
+@media (max-width: 1008px) {
+  .loaderContainer .reportContainer {
+    height: 344px;
+  }
 }
 @media (max-width: 753px) {
-  .loaderContainer .reportContainer .reportTitle {
-    height: 150px;
+  .loaderContainer .reportContainer {
+    height: 290px;
   }
 }
 @media (max-width: 590px) {
-  .loaderContainer .reportContainer .reportTitle {
-    height: 100px;
+  .loaderContainer .reportContainer {
+    height: 240px;
   }
 }
 
 .mainCardLoader {
   height: 521px;
-  background-color: #d3d3d3;
-  background: linear-gradient(90deg, #ffffff, #d3d3d3, #ffffff);
+  background-color: #dddddd;
+  background: linear-gradient(90deg, #ffffff, #dddddd, #ffffff);
   -webkit-animation: loading 8s linear infinite;
           animation: loading 8s linear infinite;
 }
@@ -1644,9 +1628,9 @@ footer .footerContainer .socialMediaContainer ul {
   height: 200px;
   margin-bottom: 20px;
   border-radius: 50%;
-  background: linear-gradient(90deg, #ffffff, #d3d3d3, #ffffff);
-  -webkit-animation: loading 8s linear infinite;
-          animation: loading 8s linear infinite;
+  background: linear-gradient(90deg, #eeeeee, #dddddd, #eeeeee);
+  -webkit-animation: loading 20s linear infinite;
+          animation: loading 20s linear infinite;
 }
 .loaderContainer .galleryContainer li .roundImgContainer .infographic {
   border-style: none;
@@ -1657,16 +1641,16 @@ footer .footerContainer .socialMediaContainer ul {
   width: 230px;
   height: 2.5rem;
   margin-bottom: 10px;
-  background: linear-gradient(90deg, #ffffff, #d3d3d3, #ffffff);
-  -webkit-animation: loading 8s linear infinite;
-          animation: loading 8s linear infinite;
+  background: linear-gradient(90deg, #eeeeee, #dddddd, #eeeeee);
+  -webkit-animation: loading 20s linear infinite;
+          animation: loading 20s linear infinite;
 }
 .loaderContainer .galleryContainer li .infContent {
   max-width: 350px;
   height: 6rem;
-  background: linear-gradient(90deg, #ffffff, #d3d3d3, #ffffff);
-  -webkit-animation: loading 8s linear infinite;
-          animation: loading 8s linear infinite;
+  background: linear-gradient(90deg, #eeeeee, #dddddd, #eeeeee);
+  -webkit-animation: loading 20s linear infinite;
+          animation: loading 20s linear infinite;
 }
 .loaderContainer .galleryContainer li.imgOnly {
   flex-basis: 25%;
@@ -1682,17 +1666,17 @@ footer .footerContainer .socialMediaContainer ul {
 .loaderContainer .blockContentContainer {
   margin: 0 auto;
 }
-.loaderContainer .blockContentContainer .contentParagraph1 {
+.loaderContainer .blockContentContainer .contentParagraph {
   width: 100%;
   height: 10rem;
-  background: linear-gradient(90deg, #ffffff, #d3d3d3, #ffffff);
+  background: linear-gradient(90deg, #ffffff, #dddddd, #ffffff);
   -webkit-animation: loading 8s linear infinite;
           animation: loading 8s linear infinite;
 }
 .loaderContainer .blockContentContainer .loaderTitleContainer {
   height: 100px;
   margin-bottom: 55px;
-  background: linear-gradient(90deg, #ffffff, #d3d3d3, #ffffff);
+  background: linear-gradient(90deg, #ffffff, #dddddd, #ffffff);
   -webkit-animation: loading 8s linear infinite;
           animation: loading 8s linear infinite;
 }/*# sourceMappingURL=main.css.map */
