--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,6 @@
 @import "./global/variables.scss";
 @import "./global/app.scss";
+@import "./components/loaderNav";
 @import "./components/nav";
 @import "./components/footer";
 @import "./components/mainCard";
