--- a/src/styles/components/_infographics.scss
+++ b/src/styles/components/_infographics.scss
@@ -2,6 +2,12 @@
   margin-top: 50px;
   margin-bottom: 50px;
 }
+.subHeadline {
+  text-align: center;
+  display: block;
+  margin-bottom: 50px;
+  text-transform: uppercase;
+}
 .galleryContainer {
   display: flex;
   justify-content: space-between;
