--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -21,3 +21,4 @@
 @import "./components/mainCardLoader";
 @import "./components/loaderInfographics";
 @import "./components/loaderContentOpportunity";
+@import "./components/loaderFooter";
