modified stylings to meet client's requests

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -12,6 +12,7 @@ footer {
     gap: 30px;
     p {
       color: $darkGreen;
+      font-size: 0.7rem;
     }
     .socialMediaContainer {
       display: flex;
