--- a/src/styles/global/_app.scss
+++ b/src/styles/global/_app.scss
@@ -360,7 +360,7 @@ h4 {
 }
 
 p {
-  font-size: 0.7rem;
+  font-size: 0.8rem;
   line-height: 1rem;
 }
 
@@ -369,5 +369,58 @@ p {
   // padding: 20px 0 0;
   @media (max-width: 414px) {
     width: clamp(250px, 70vw, 280px);
+  }
+}
+
+.pageTitleContainer {
+  background-color: $darkTeal;
+  width: 100%;
+  height: 5rem;
+  display: flex;
+  align-items: center;
+  margin-bottom: 50px;
+  .pageTitle {
+    font-weight: 600;
+    font-size: 1.9rem;
+    line-height: 2.2rem;
+    text-transform: capitalize;
+    color: $white;
+    margin: 0 30px;
+  }
+  @media (max-width: 959px) {
+    .pageTitle {
+      font-size: 1.8rem;
+    }
+  }
+  @media (max-width: 899px) {
+    .pageTitle {
+      font-size: 1.7rem;
+    }
+  }
+  @media (max-width: 845px) {
+    .pageTitle {
+      font-size: 1.6rem;
+    }
+  }
+  @media (max-width: 815px) {
+    .pageTitle {
+      font-size: 1.5rem;
+      margin: 0 20px;
+    }
+  }
+  @media (max-width: 761px) {
+    .pageTitle {
+      font-size: 1.4rem;
+    }
+  }
+  @media (max-width: 636px) {
+    .pageTitle {
+      margin: 0 15px;
+    }
+  }
+  @media (max-width: 590px) {
+    .pageTitle {
+      margin: 0 10px;
+    }
   }
 }
