--- a/src/styles/components/_infographics.scss
+++ b/src/styles/components/_infographics.scss
@@ -2,12 +2,6 @@
   margin-top: 50px;
   margin-bottom: 50px;
 }
-.subHeadline {
-  text-align: center;
-  display: block;
-  margin-bottom: 50px;
-  text-transform: uppercase;
-}
 .galleryContainer {
   display: flex;
   justify-content: space-between;
@@ -23,12 +17,13 @@
       justify-content: center;
       align-items: center;
       img {
-        width: 100%;
+        width: 170px;
       }
     }
     .infographicTitle {
       h4 {
         font-weight: 800;
+        font-size: 19px;
       }
     }
     .infographicContent {
@@ -50,11 +45,6 @@
   .galleryContainer {
     li {
       flex-basis: calc(50% - 20px);
-      .roundImgContainer {
-        img {
-          width: 75%;
-        }
-      }
     }
   }
 }
@@ -71,11 +61,6 @@
     display: block;
     li {
       margin-bottom: 30px;
-      .roundImgContainer {
-        img {
-          width: 65%;
-        }
-      }
     }
   }
 }
