--- a/src/styles/components/_infographics.scss
+++ b/src/styles/components/_infographics.scss
@@ -21,9 +21,10 @@
       }
     }
     .infographicTitle {
-      h4 {
+      h3 {
         font-weight: 800;
         font-size: 19px;
+        line-height: 1.2rem;
       }
     }
     .infographicContent {
