--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -22,3 +22,4 @@
 @import "./components/loaderInfographics";
 @import "./components/loaderContentOpportunity";
 @import "./components/loaderFooter";
+@import "./components/navMobile";
