--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -14,6 +14,7 @@ body {
   font-size: 14px;
   color: #333333;
   font-weight: 600;
+  position: relative;
 }
 
 article,
@@ -368,6 +369,12 @@ p {
   }
 }
 
+@media (max-width: 414px) {
+  .logoContainerMobile {
+    width: clamp(200px, 50vw, 280px);
+  }
+}
+
 .loaderContainer nav {
   display: flex;
   justify-content: space-around;
@@ -400,15 +407,16 @@ nav {
 }
 @media (max-width: 980px) {
   nav {
-    flex-direction: column;
-    align-items: center;
-    gap: 30px;
+    justify-content: space-between;
+    max-width: 980px;
+    width: 90%;
+    margin: 0 auto;
   }
 }
 nav .logoContainer {
   padding-top: 20px;
 }
-nav ul {
+nav ul.desktopMenu {
   display: flex;
   justify-content: flex-end;
   justify-items: center;
@@ -416,13 +424,80 @@ nav ul {
   gap: 30px;
   font-weight: 800;
 }
-@media (max-width: 545px) {
-  nav ul {
-    flex-direction: column;
+@media (max-width: 980px) {
+  nav ul.desktopMenu {
+    bottom: 0;
+    display: block;
+    opacity: 0;
+    margin-top: 8rem;
+    position: fixed;
+    right: -44.7%;
+    top: 0;
+    visibility: hidden;
+    width: 85%;
+    z-index: 20;
   }
 }
-nav ul p {
+nav ul.menuMobileItems {
+  margin-top: 8rem;
+  margin-left: 2rem;
+  display: flex;
+  justify-content: flex-end;
+  justify-items: center;
+  align-items: center;
+  gap: 30px;
+  font-weight: 800;
+}
+nav ul.menuMobileItems.showMenuItems {
+  justify-content: flex-start;
+  opacity: 1;
+  right: -18px;
+  visibility: visible;
+  z-index: 99999;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+nav ul.menuMobileItems p {
   color: #1f4a68;
+}
+nav ul.menuMobileItems p.menuItem {
+  font-size: 1.3rem;
+  line-height: 1.8rem;
+  z-index: 99999;
+}
+nav .burgerMenu {
+  display: none;
+}
+@media (max-width: 980px) {
+  nav .burgerMenu {
+    display: block;
+    cursor: pointer;
+    color: #1f4a68;
+    padding: 0;
+    position: fixed;
+    right: 30px;
+    top: 25px;
+    width: 60px;
+    z-index: 100;
+    border: none;
+    background-color: transparent;
+  }
+}
+@media (max-width: 414px) {
+  nav .burgerMenu {
+    right: -4px;
+    top: 22px;
+  }
+}
+nav .burgerMenu .burgerIcon {
+  font-size: 2rem;
+  color: #1f4a68;
+}
+@media (max-width: 414px) {
+  nav .burgerMenu .burgerIcon {
+    font-size: 1.5rem;
+  }
 }
 
 footer {
@@ -472,7 +547,8 @@ footer .footerContainer .socialMediaContainer ul {
   }
 }
 .mainCard {
-  margin-top: 110px;
+  margin-top: 50px;
+  margin-bottom: 50px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -738,52 +814,84 @@ footer .footerContainer .socialMediaContainer ul {
     font-size: 0.7rem;
   }
 }
+.factsStatements {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.subHeadline {
+  text-align: center;
+  display: block;
+  margin-bottom: 50px;
+  text-transform: uppercase;
+}
+
 .galleryContainer {
   display: flex;
   justify-content: space-between;
-  align-items: center;
   flex-wrap: wrap;
-  row-gap: 60px;
+  gap: 30px;
 }
 .galleryContainer li {
+  flex-basis: calc(25% - 30px);
   display: flex;
   flex-direction: column;
-  flex-basis: 45%;
+  gap: 10px;
 }
 .galleryContainer li .roundImgContainer {
-  width: 230px;
-  height: 230px;
-  margin-bottom: 20px;
-}
-.galleryContainer li h4 {
-  font-weight: 800;
-  margin-bottom: 10px;
-}
-.galleryContainer li p {
-  max-width: 350px;
-}
-.galleryContainer li.imgOnly {
-  flex-basis: 25%;
   display: flex;
+  justify-content: center;
   align-items: center;
 }
-@media (max-width: 1023px) {
-  .galleryContainer li.imgOnly {
-    flex-basis: 50%;
-  }
+.galleryContainer li .roundImgContainer img {
+  width: 100%;
+}
+.galleryContainer li .infographicTitle h4 {
+  font-weight: 800;
+}
+.galleryContainer li .infographicContent p {
+  max-width: 100%;
 }
 
+@media (max-width: 1065px) {
+  .galleryContainer {
+    gap: 20px;
+  }
+  .galleryContainer li {
+    flex-basis: calc(25% - 20px);
+  }
+}
+@media (max-width: 959px) {
+  .galleryContainer li {
+    flex-basis: calc(50% - 20px);
+  }
+  .galleryContainer li .roundImgContainer img {
+    width: 75%;
+  }
+}
+@media (max-width: 748px) {
+  .galleryContainer {
+    gap: 10px;
+  }
+  .galleryContainer li {
+    flex-basis: calc(50% - 10px);
+  }
+}
 @media (max-width: 590px) {
-  .galleryContainer li,
-.galleryContainer li.imgOnly {
-    flex-basis: 100%;
-    align-items: center;
+  .galleryContainer {
+    display: block;
+  }
+  .galleryContainer li {
+    margin-bottom: 30px;
+  }
+  .galleryContainer li .roundImgContainer img {
+    width: 65%;
   }
 }
 .blockContentContainer {
   margin: 100px auto;
 }
-.blockContentContainer h3, .blockContentContainer p, .blockContentContainer ul {
+.blockContentContainer h2, .blockContentContainer p, .blockContentContainer ul {
   margin-bottom: 25px;
 }
 .blockContentContainer p {
@@ -813,6 +921,11 @@ footer .footerContainer .socialMediaContainer ul {
   color: #1f4a68;
   font-size: inherit;
   text-decoration: underline;
+}
+
+.media {
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 .pageTitleContainer {
@@ -975,6 +1088,11 @@ footer .footerContainer .socialMediaContainer ul {
     width: 150px;
   }
 }
+.report {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
 .reportList {
   display: flex;
   flex-wrap: wrap;
@@ -1011,9 +1129,13 @@ footer .footerContainer .socialMediaContainer ul {
   display: inline-block;
   font-weight: 800;
   color: #ffffff;
-  height: 250px;
+  height: 12rem;
   text-align: left;
   text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+  display: -webkit-box;
+  overflow: hidden;
+  -webkit-line-clamp: 8;
+  -webkit-box-orient: vertical;
 }
 
 .reportButton {
@@ -1030,7 +1152,7 @@ footer .footerContainer .socialMediaContainer ul {
   color: #5b697a;
 }
 
-@media (max-width: 1008px) {
+@media (max-width: 1010px) {
   .reportList {
     justify-content: space-between;
     gap: 50px 30px;
@@ -1041,7 +1163,8 @@ footer .footerContainer .socialMediaContainer ul {
     flex-basis: calc(50% - 15px);
   }
   .reportTitle {
-    height: 200px;
+    height: 10.5rem;
+    -webkit-line-clamp: 7;
   }
 }
 @media (max-width: 845px) {
@@ -1049,12 +1172,13 @@ footer .footerContainer .socialMediaContainer ul {
     gap: 40px 30px;
   }
   .reportType {
-    font-size: 0.6rem;
-    line-height: 1rem;
+    font-size: 0.7rem;
+    line-height: 1.1rem;
   }
   .reportTitle {
-    font-size: 1rem;
-    line-height: 1.2rem;
+    font-size: 1.1rem;
+    line-height: 1.25rem;
+    height: 8.75rem;
   }
 }
 @media (max-width: 753px) {
@@ -1066,7 +1190,10 @@ footer .footerContainer .socialMediaContainer ul {
     flex-basis: calc(50% - 15px);
   }
   .reportTitle {
-    height: 150px;
+    font-size: 1rem;
+    line-height: 1.25rem;
+    height: 7.5rem;
+    -webkit-line-clamp: 6;
   }
 }
 @media (max-width: 590px) {
@@ -1076,18 +1203,25 @@ footer .footerContainer .socialMediaContainer ul {
   .reportList .reportContainer {
     margin-bottom: 20px;
   }
-  .reportTitle {
-    height: 100px;
+  .reportButton {
+    padding: 9px 25px;
+    min-width: 40%;
   }
 }
-@media (max-width: 340px) {
+@media (max-width: 397px) {
   .reportType {
-    font-size: 0.5rem;
-    line-height: 0.8rem;
+    font-size: 0.6rem;
+    line-height: 0.95rem;
   }
   .reportTitle {
     font-size: 0.9rem;
     line-height: 1rem;
+    height: 6rem;
+    -webkit-line-clamp: 6;
+  }
+  .reportButton {
+    padding: 8px 20px;
+    min-width: 40%;
   }
 }
 .blogList {
@@ -1628,10 +1762,9 @@ footer .footerContainer .socialMediaContainer ul {
 
 .mainCardLoader {
   height: 521px;
-  background-color: #dddddd;
-  background: linear-gradient(90deg, #ffffff, #dddddd, #ffffff);
-  -webkit-animation: loading 8s linear infinite;
-          animation: loading 8s linear infinite;
+  background: linear-gradient(90deg, #eeeeee, #dddddd, #eeeeee);
+  -webkit-animation: loading 20s linear infinite;
+          animation: loading 20s linear infinite;
 }
 
 .loaderContainer .galleryContainer {
@@ -1692,16 +1825,16 @@ footer .footerContainer .socialMediaContainer ul {
 .loaderContainer .blockContentContainer .contentParagraph {
   width: 100%;
   height: 10rem;
-  background: linear-gradient(90deg, #ffffff, #dddddd, #ffffff);
-  -webkit-animation: loading 8s linear infinite;
-          animation: loading 8s linear infinite;
+  background: linear-gradient(90deg, #eeeeee, #dddddd, #eeeeee);
+  -webkit-animation: loading 20s linear infinite;
+          animation: loading 20s linear infinite;
 }
 .loaderContainer .blockContentContainer .loaderTitleContainer {
   height: 100px;
   margin-bottom: 55px;
-  background: linear-gradient(90deg, #ffffff, #dddddd, #ffffff);
-  -webkit-animation: loading 8s linear infinite;
-          animation: loading 8s linear infinite;
+  background: linear-gradient(90deg, #eeeeee, #dddddd, #eeeeee);
+  -webkit-animation: loading 20s linear infinite;
+          animation: loading 20s linear infinite;
 }
 
 .loaderContainer {
@@ -1762,5 +1895,49 @@ footer .footerContainer .socialMediaContainer ul {
   .loaderContainer footer .footerContainer .socialMediaContainer {
     flex-direction: column;
     gap: 25px;
+  }
+}
+.overlay {
+  display: none;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: #eeeeee;
+  z-index: 999;
+}
+.overlay.backdrop {
+  display: block;
+  opacity: 0.85;
+  transition: opacity 0.3s;
+}
+
+.menuMobile {
+  position: absolute;
+  right: -200vw;
+}
+.menuMobile.showMenu {
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 85%;
+  z-index: 9999;
+  transition: right 0.3s;
+}
+.menuMobile.showMenu .closeMenuIcon {
+  display: block;
+  cursor: pointer;
+  font-size: 2rem;
+  color: #1f4a68;
+  padding: 0;
+  position: fixed;
+  right: 30px;
+  top: 25px;
+  width: 60px;
+}
+@media (max-width: 980px) {
+  .menuMobile {
+    background-color: #dddddd;
   }
 }/*# sourceMappingURL=main.css.map */
