--- a/src/styles/global/_app.scss
+++ b/src/styles/global/_app.scss
@@ -16,6 +16,7 @@ body {
   color: $darkGray;
   font-weight: 600;
   position: relative;
+  overflow-x: hidden;
 }
 
 article,
@@ -369,7 +370,7 @@ p {
   width: 280px;
   // padding: 20px 0 0;
   @media (max-width: 414px) {
-    width: clamp(250px, 70vw, 280px);
+    width: clamp(200px, 50vw, 280px);
   }
 }
 
