--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -15,6 +15,7 @@ body {
   color: #333333;
   font-weight: 600;
   position: relative;
+  overflow-x: hidden;
 }
 
 article,
@@ -356,7 +357,7 @@ h4 {
 }
 
 p {
-  font-size: 0.7rem;
+  font-size: 0.8rem;
   line-height: 1rem;
 }
 
@@ -365,13 +366,60 @@ p {
 }
 @media (max-width: 414px) {
   .logoContainer {
-    width: clamp(250px, 70vw, 280px);
+    width: clamp(200px, 50vw, 280px);
   }
 }
 
-@media (max-width: 414px) {
-  .logoContainerMobile {
-    width: clamp(200px, 50vw, 280px);
+.pageTitleContainer {
+  background-color: #1f4a68;
+  width: 100%;
+  height: 5rem;
+  display: flex;
+  align-items: center;
+  margin-bottom: 50px;
+}
+.pageTitleContainer .pageTitle {
+  font-weight: 600;
+  font-size: 1.9rem;
+  line-height: 2.2rem;
+  text-transform: capitalize;
+  color: #ffffff;
+  margin: 0 30px;
+}
+@media (max-width: 959px) {
+  .pageTitleContainer .pageTitle {
+    font-size: 1.8rem;
+  }
+}
+@media (max-width: 899px) {
+  .pageTitleContainer .pageTitle {
+    font-size: 1.7rem;
+  }
+}
+@media (max-width: 845px) {
+  .pageTitleContainer .pageTitle {
+    font-size: 1.6rem;
+  }
+}
+@media (max-width: 815px) {
+  .pageTitleContainer .pageTitle {
+    font-size: 1.5rem;
+    margin: 0 20px;
+  }
+}
+@media (max-width: 761px) {
+  .pageTitleContainer .pageTitle {
+    font-size: 1.4rem;
+  }
+}
+@media (max-width: 636px) {
+  .pageTitleContainer .pageTitle {
+    margin: 0 15px;
+  }
+}
+@media (max-width: 590px) {
+  .pageTitleContainer .pageTitle {
+    margin: 0 10px;
   }
 }
 
@@ -449,9 +497,9 @@ nav ul.menuMobileItems {
   font-weight: 800;
 }
 nav ul.menuMobileItems.showMenuItems {
+  position: fixed;
   justify-content: flex-start;
   opacity: 1;
-  right: -18px;
   visibility: visible;
   z-index: 99999;
   display: flex;
@@ -518,6 +566,7 @@ footer .footerContainer {
 }
 footer .footerContainer p {
   color: #1f4a68;
+  font-size: 0.7rem;
 }
 footer .footerContainer .socialMediaContainer {
   display: flex;
@@ -585,11 +634,12 @@ footer .footerContainer .socialMediaContainer ul {
 .mainCard .contentBlockContainer p {
   text-align: left;
   margin-bottom: 25px;
+  line-height: 1.3rem;
 }
 
 .members {
-  margin-top: 50px;
   margin-bottom: 50px;
+  margin-top: 50px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -599,22 +649,6 @@ footer .footerContainer .socialMediaContainer ul {
   .members {
     width: 90%;
   }
-}
-.members .memberTypeContainer {
-  background-color: #1f4a68;
-  width: 100%;
-  height: 5rem;
-  display: flex;
-  align-items: center;
-  margin-bottom: 50px;
-}
-.members .memberTypeContainer .memberType {
-  font-weight: 600;
-  font-size: 1.9rem;
-  line-height: 2.2rem;
-  text-transform: uppercase;
-  color: #ffffff;
-  margin: 0 30px;
 }
 
 .membersListContainer {
@@ -632,6 +666,7 @@ footer .footerContainer .socialMediaContainer ul {
   gap: 20px;
 }
 .membersList .membersIntro p {
+  font-size: 0.7rem;
   margin-top: 10px;
   max-width: 100%;
   text-align: left;
@@ -706,7 +741,7 @@ footer .footerContainer .socialMediaContainer ul {
 
 .membersName h3 {
   text-align: left;
-  font-size: 1.2rem;
+  font-size: 1rem;
   font-weight: 500;
   letter-spacing: -1px;
 }
@@ -819,13 +854,6 @@ footer .footerContainer .socialMediaContainer ul {
   margin-bottom: 50px;
 }
 
-.subHeadline {
-  text-align: center;
-  display: block;
-  margin-bottom: 50px;
-  text-transform: uppercase;
-}
-
 .galleryContainer {
   display: flex;
   justify-content: space-between;
@@ -844,10 +872,12 @@ footer .footerContainer .socialMediaContainer ul {
   align-items: center;
 }
 .galleryContainer li .roundImgContainer img {
-  width: 100%;
+  width: 170px;
 }
-.galleryContainer li .infographicTitle h4 {
+.galleryContainer li .infographicTitle h3 {
   font-weight: 800;
+  font-size: 19px;
+  line-height: 1.2rem;
 }
 .galleryContainer li .infographicContent p {
   max-width: 100%;
@@ -865,9 +895,6 @@ footer .footerContainer .socialMediaContainer ul {
   .galleryContainer li {
     flex-basis: calc(50% - 20px);
   }
-  .galleryContainer li .roundImgContainer img {
-    width: 75%;
-  }
 }
 @media (max-width: 748px) {
   .galleryContainer {
@@ -884,9 +911,6 @@ footer .footerContainer .socialMediaContainer ul {
   .galleryContainer li {
     margin-bottom: 30px;
   }
-  .galleryContainer li .roundImgContainer img {
-    width: 65%;
-  }
 }
 .blockContentContainer {
   margin: 100px auto;
@@ -895,7 +919,7 @@ footer .footerContainer .socialMediaContainer ul {
   margin-bottom: 25px;
 }
 .blockContentContainer p {
-  line-height: 1rem;
+  line-height: 1.3rem;
 }
 .blockContentContainer li {
   margin-left: 30px;
@@ -926,24 +950,6 @@ footer .footerContainer .socialMediaContainer ul {
 .media {
   margin-top: 50px;
   margin-bottom: 50px;
-}
-
-.pageTitleContainer {
-  background-color: #1f4a68;
-  width: 100%;
-  height: 5rem;
-  display: flex;
-  align-items: center;
-  margin-top: 50px;
-  margin-bottom: 50px;
-}
-.pageTitleContainer .pageTitle {
-  font-weight: 600;
-  font-size: 1.9rem;
-  line-height: 2.2rem;
-  text-transform: uppercase;
-  color: #ffffff;
-  margin: 0 30px;
 }
 
 .mediaList {
@@ -991,6 +997,7 @@ footer .footerContainer .socialMediaContainer ul {
   align-items: center;
 }
 .mediaLogoContainer .mediaLogo {
+  width: 40%;
   align-self: center;
   aspect-ratio: 1/1;
 }
@@ -1027,10 +1034,6 @@ footer .footerContainer .socialMediaContainer ul {
   .mediaList .mediaContainer {
     flex-basis: calc(50% - 10px);
   }
-  .mediaLogoContainer .mediaLogo {
-    height: 200px;
-    width: 200px;
-  }
 }
 @media (max-width: 771px) {
   .mediaTextContainer .mediaType {
@@ -1059,6 +1062,9 @@ footer .footerContainer .socialMediaContainer ul {
   .mediaLogoContainer {
     margin: 15px 0;
   }
+  .mediaLogoContainer .mediaLogo {
+    width: 30%;
+  }
 }
 @media (max-width: 534px) {
   .pageTitleContainer .pageTitle {
@@ -1069,6 +1075,9 @@ footer .footerContainer .socialMediaContainer ul {
 @media (max-width: 375px) {
   .opportunityTitle {
     height: 6rem;
+  }
+  .mediaLogoContainer .mediaLogo {
+    width: 40%;
   }
 }
 @media (max-width: 324px) {
@@ -1082,10 +1091,6 @@ footer .footerContainer .socialMediaContainer ul {
   .mediaTextContainer .mediaTitle {
     font-size: 0.9rem;
     line-height: 1rem;
-  }
-  .mediaLogoContainer .mediaLogo {
-    height: 150px;
-    width: 150px;
   }
 }
 .report {
@@ -1224,128 +1229,6 @@ footer .footerContainer .socialMediaContainer ul {
     min-width: 40%;
   }
 }
-.blogList {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  gap: 30px;
-}
-.blogList .blogContainer {
-  flex-basis: calc(25% - 20px);
-  margin-bottom: 60px;
-}
-.blogList .blogContainer .blogBg {
-  border-radius: 10px;
-  height: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-start;
-  gap: 10px;
-  padding: 30px 35px;
-}
-.blogList .blogContainer:nth-child(6n-3),
-.blogList .blogContainer:nth-child(6n-2) {
-  flex-basis: calc(50% - 20px);
-}
-@media (max-width: 993px) {
-  .blogList {
-    justify-content: space-between;
-  }
-  .blogList .blogContainer,
-.blogList .blogContainer:nth-child(6n-3),
-.blogList .blogContainer:nth-child(6n-2) {
-    flex-basis: calc(50% - 15px);
-    margin-bottom: 40px;
-  }
-}
-@media (max-width: 753px) {
-  .blogList {
-    justify-content: space-between;
-  }
-  .blogList .blogContainer,
-.blogList .blogContainer:nth-child(6n-3),
-.blogList .blogContainer:nth-child(6n-2) {
-    flex-basis: calc(50% - 15px);
-    margin-bottom: 30px;
-  }
-}
-@media (max-width: 590px) {
-  .blogList {
-    justify-content: center;
-    gap: 20px;
-  }
-  .blogList .blogContainer,
-.blogList .blogContainer:nth-child(6n-3),
-.blogList .blogContainer:nth-child(6n-2) {
-    flex-basis: 100%;
-  }
-}
-
-.blogType {
-  display: inline-block;
-  text-align: left;
-  text-transform: uppercase;
-  font-weight: 500;
-  height: 2.5rem;
-  color: #ffffff;
-  text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
-}
-
-.blogTitle {
-  font-weight: 800;
-  color: #ffffff;
-  height: 12rem;
-  max-width: 70%;
-  text-align: left;
-  text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
-  display: -webkit-box;
-  overflow: hidden;
-  -webkit-line-clamp: 8;
-  -webkit-box-orient: vertical;
-}
-
-.blogButton {
-  display: inline-block;
-  text-align: center;
-  text-transform: uppercase;
-  border: none;
-  font-weight: bold;
-  padding: 10px 35px;
-  border-radius: 5px;
-  min-width: 50%;
-  background-color: #ffffff;
-  font-size: 0.7rem;
-  line-height: 1rem;
-  color: #5b697a;
-}
-.blogButton:hover {
-  scale: 1.05;
-  transition: 0.1s ease;
-  background-color: #1991eb;
-  color: #ffffff;
-}
-
-@media (max-width: 845px) {
-  .blogType {
-    font-size: 0.6rem;
-    line-height: 1rem;
-  }
-  .blogTitle {
-    font-size: 1rem;
-    line-height: 1.2rem;
-  }
-}
-@media (max-width: 324px) {
-  .blogType {
-    font-size: 0.5rem;
-    line-height: 0.8rem;
-  }
-  .blogTitle {
-    font-size: 0.9rem;
-    line-height: 1rem;
-  }
-}
 .errorPage {
   display: flex;
   flex-direction: column;
@@ -1380,124 +1263,6 @@ footer .footerContainer .socialMediaContainer ul {
 }
 .errorData p {
   width: 50%;
-}
-
-/* Loader Styles */
-@-webkit-keyframes ldsRoller {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-@keyframes ldsRoller {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-.loadingContainer {
-  background-color: #bae6da;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 20px;
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
-  margin: 0 auto;
-}
-.loadingContainer p {
-  color: #333333;
-}
-.loadingContainer .ldsRoller {
-  display: inline-block;
-  position: relative;
-  width: 80px;
-  height: 80px;
-}
-.loadingContainer .ldsRoller div {
-  -webkit-animation: ldsRoller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-          animation: ldsRoller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-  transform-origin: 40px 40px;
-}
-.loadingContainer .ldsRoller div::after {
-  content: " ";
-  display: block;
-  position: absolute;
-  width: 7px;
-  height: 7px;
-  border-radius: 50%;
-  background: #f85359;
-  margin: -4px 0 0 -4px;
-}
-.loadingContainer .ldsRoller div:nth-child(1) {
-  -webkit-animation-delay: -0.036s;
-          animation-delay: -0.036s;
-}
-.loadingContainer .ldsRoller div:nth-child(1)::after {
-  top: 63px;
-  left: 63px;
-}
-.loadingContainer .ldsRoller div:nth-child(2) {
-  -webkit-animation-delay: -0.072s;
-          animation-delay: -0.072s;
-}
-.loadingContainer .ldsRoller div:nth-child(2)::after {
-  top: 68px;
-  left: 56px;
-}
-.loadingContainer .ldsRoller div:nth-child(3) {
-  -webkit-animation-delay: -0.108s;
-          animation-delay: -0.108s;
-}
-.loadingContainer .ldsRoller div:nth-child(3)::after {
-  top: 71px;
-  left: 48px;
-}
-.loadingContainer .ldsRoller div:nth-child(4) {
-  -webkit-animation-delay: -0.144s;
-          animation-delay: -0.144s;
-}
-.loadingContainer .ldsRoller div:nth-child(4)::after {
-  top: 72px;
-  left: 40px;
-}
-.loadingContainer .ldsRoller div:nth-child(5) {
-  -webkit-animation-delay: -0.18s;
-          animation-delay: -0.18s;
-}
-.loadingContainer .ldsRoller div:nth-child(5)::after {
-  top: 71px;
-  left: 32px;
-}
-.loadingContainer .ldsRoller div:nth-child(6) {
-  -webkit-animation-delay: -0.216s;
-          animation-delay: -0.216s;
-}
-.loadingContainer .ldsRoller div:nth-child(6)::after {
-  top: 68px;
-  left: 24px;
-}
-.loadingContainer .ldsRoller div:nth-child(7) {
-  -webkit-animation-delay: -0.252s;
-          animation-delay: -0.252s;
-}
-.loadingContainer .ldsRoller div:nth-child(7)::after {
-  top: 63px;
-  left: 17px;
-}
-.loadingContainer .ldsRoller div:nth-child(8) {
-  -webkit-animation-delay: -0.288s;
-          animation-delay: -0.288s;
-}
-.loadingContainer .ldsRoller div:nth-child(8)::after {
-  top: 56px;
-  left: 12px;
 }
 
 @-webkit-keyframes loading {
@@ -1915,7 +1680,7 @@ footer .footerContainer .socialMediaContainer ul {
 
 .menuMobile {
   position: absolute;
-  right: -200vw;
+  right: -350%;
 }
 .menuMobile.showMenu {
   top: 0;
@@ -1935,6 +1700,12 @@ footer .footerContainer .socialMediaContainer ul {
   right: 30px;
   top: 25px;
   width: 60px;
+}
+@media (max-width: 414px) {
+  .menuMobile.showMenu .closeMenuIcon {
+    right: -4px;
+    top: 22px;
+  }
 }
 @media (max-width: 980px) {
   .menuMobile {
