--- a/src/styles/components/_infographics.scss
+++ b/src/styles/components/_infographics.scss
@@ -2,6 +2,12 @@
   margin-top: 50px;
   margin-bottom: 50px;
 }
+h3.subtitle {
+  color: $darkTeal;
+  text-align: center;
+  margin-bottom: 45px;
+  text-transform: capitalize;
+}
 .galleryContainer {
   display: flex;
   justify-content: space-between;
